# foreman

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  README.md  config.sample.yaml  dogfood-log.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-06-15-architecture-deepening.md
dogfood/: AUTOREVIEW_LOG.md  CAMPAIGN.md  FLYWHEEL.md  ITERATION_REPORT.md  METRICS.md  TIMELINE.md  campaign-state.pre-payoff.json  cost-ledger.json  cost-ledger.md
dogfood/_mock_dryrun/: AUTOREVIEW_LOG.md  TIMELINE.md  campaign-state.json  cost-ledger.json  cost-ledger.md
dogfood/harness/: autoreviewer.py  campaign_config.py  claude_call.py  conductor.py  dryrun_mock.py  flywheel.py  flywheel_patchgate.py  guardrails.py  logs.py  reports.py  run_campaign.py  snapshots.py  state_reader.py  wait_for.py
dogfood/harness/tests/: test_guardrails.py  (+1 more)
dogfood/snapshots/: backlog-aging-00-request.json  backlog-aging-grill-TIMEOUT.json  backlog-aging-review-plan-approve.json  daily-plan-endpoint-00-request.json  daily-plan-endpoint-99-final.json  daily-plan-endpoint-escalation-ISS-001.json  daily-plan-endpoint-queue-approve.json  daily-plan-endpoint-review-adr-approve.json  daily-plan-endpoint-review-plan-approve.json  daily-plan-endpoint-review-prd-approve.json  easier-mornings-00-request.json  easier-mornings-grill-TIMEOUT.json  easier-mornings-review-plan-approve.json  return-created-at-in-task-list-00-request.json  return-created-at-in-task-list-99-final.json  return-created-at-in-task-list-queue-approve.json  return-created-at-in-task-list-review-adr-approve.json  return-created-at-in-task-list-review-plan-approve.json  return-created-at-in-task-list-review-plan-request_changes.json  return-created-at-in-task-list-review-prd-approve.json  task-priority-and-due-date-00-request.json  task-priority-and-due-date-review-plan-approve.json  task-priority-and-due-date-review-plan-request_changes.json  task-priority-and-due-date-review-prd-request_changes.json
examples/hello/: __init__.py  hello.py  test_hello.py
issues/: ISS-001-dashboard-kanban-truncates-issue-ids.md
src/foreman/: __init__.py  audit.py  backend.py  cli.py  config.py  conflicts.py  cost.py  demo.py  demo_scripts.py  frontmatter.py  git_ops.py  hashing.py  headless.py  installer.py  issue_run.py  janitor.py  ledger.py  locks.py  models.py  notify.py  paths.py  pipeline.py  prd.py  prompts.py  review.py  runner.py  sample.py  scheduler.py  seal.py  skill_invocation.py  state.py  stream_parser.py  summary.py  turns.py  vendored.py  verify.py  worktree.py
tests/: conftest.py  test_audit.py  test_backend.py  test_bench.py  test_budget_policy.py  test_config.py  test_conflicts.py  test_context.py  test_controller.py  test_controller_facade.py  test_demo.py  test_evaluator.py  test_event_vocab.py  test_filestore_artifacts.py  test_frontmatter.py  test_gate.py  test_headless.py  test_hooks.py  test_installer.py  test_integration_ws56.py  test_issue_run.py  test_janitor.py  test_locks.py  test_merge_gate.py  test_metrics.py  test_migration.py  test_models.py  test_notify.py  test_pipeline.py  test_prompts.py  test_retro.py  test_review.py  test_reviewer.py  test_runner.py  test_scheduler.py  test_seal.py  test_security.py  test_skill_wiring.py  test_state.py  test_stream_parser.py  (+5 more)
validation/: CHECKPOINTS.md  RESULTS.md  VALIDATION_BUGS.md  cost-report.md
(+66 files in other folders)
