[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman-orchestrator"
version = "0.6.0"
description = "A Boris-style agentic orchestrator TUI that supervises headless Claude Code agents through a gated plan→ADR/PRD→issues→TDD→e2e delivery pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ehsantg", email = "me@ehsan.ee" }]
keywords = ["claude", "claude-code", "tui", "agents", "orchestrator", "textual", "tdd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "textual>=0.79",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/VisionForge-OU/foreman"
Repository = "https://github.com/VisionForge-OU/foreman"
Issues = "https://github.com/VisionForge-OU/foreman/issues"
Changelog = "https://github.com/VisionForge-OU/foreman/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "textual-dev>=1.5",
]

[project.scripts]
foreman = "foreman.cli:main"

[tool.hatch.build.targets.wheel]
# Ships the package including the vendored skills (.md) and fixtures data files.
packages = ["src/foreman"]
artifacts = [
    "src/foreman/skills/**",
    "src/foreman/fixtures/**",
    "src/foreman/hooks/assets/**",
    "src/foreman/agents/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.metadata]
allow-direct-references = true
